Bug 297507 - Kopete crashes when setting display picture
Summary: Kopete crashes when setting display picture
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.1.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-05 05:42 UTC by Thibaut Renaux
Modified: 2013-10-26 12:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thibaut Renaux 2012-04-05 05:42:10 UTC
Application: kopete (1.1.3)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-17-generic x86_64
Distribution: Linux Mint 12 Lisa

-- Information about the crash:
- What I was doing when the application crashed:
After picking a display picture for a Live Messenger account and choosing which area of the picture to use, Kopete crashed.

-- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f5331dc2780 (LWP 26412))]

Thread 2 (Thread 0x7f531a367700 (LWP 26438)):
#0  0x00007f5329cd71fd in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x1d7cb78) at pthread_mutex_unlock.c:290
#2  0x00007f53292053f5 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5329205e6a in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5329206429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f532f851f3e in QEventDispatcherGlib::processEvents (this=0x1b84b10, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007f532f825cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f532f825ef7 in QEventLoop::exec (this=0x7f531a366dd0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00007f532f73d27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#9  0x00007f532f808cbf in QInotifyFileSystemWatcherEngine::run (this=0x1d04280) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f532f73fd05 in QThreadPrivate::start (arg=0x1d04280) at thread/qthread_unix.cpp:331
#11 0x00007f5329cd3efc in start_thread (arg=0x7f531a367700) at pthread_create.c:304
#12 0x00007f532e19c59d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f5331dc2780 (LWP 26412)):
[KCrash Handler]
#6  Kopete::PropertyContainer::hasProperty (this=0x0, key=...) at ../../../kopete/libkopete/kopetepropertycontainer.cpp:108
#7  0x00007f533149ea31 in Kopete::PropertyContainer::property (this=0x0, key=...) at ../../../kopete/libkopete/kopetepropertycontainer.cpp:113
#8  0x00007f533149ecc8 in Kopete::PropertyContainer::setProperty (this=0x0, tmpl=..., value=...) at ../../../kopete/libkopete/kopetepropertycontainer.cpp:145
#9  0x00007f5330b4eb21 in IdentityStatusWidget::slotPhotoClicked (this=0x19b5c40) at ../../../../kopete/kopete/identity/identitystatuswidget.cpp:349
#10 0x00007f5330b4ed8c in IdentityStatusWidget::qt_metacall (this=0x19b5c40, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff53a03c00) at ./identitystatuswidget.moc:97
#11 0x00007f532f839eba in QMetaObject::activate (sender=0x19d3630, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff53a03c00) at kernel/qobject.cpp:3278
#12 0x00007f532efce642 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#13 0x00007f532ed141fe in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#14 0x00007f532ed1553b in QAbstractButtonPrivate::click (this=0x19c8bf0) at widgets/qabstractbutton.cpp:539
#15 0x00007f532ed157ac in QAbstractButton::mouseReleaseEvent (this=0x19d3630, e=0x7fff53a04320) at widgets/qabstractbutton.cpp:1121
#16 0x00007f532edd239a in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:721
#17 0x00007f532e9adcea in QWidget::event (this=0x19d3630, event=0x7fff53a04320) at kernel/qwidget.cpp:8295
#18 0x00007f532e95d474 in notify_helper (e=0x7fff53a04320, receiver=0x19d3630, this=0x183d2d0) at kernel/qapplication.cpp:4486
#19 QApplicationPrivate::notify_helper (this=0x183d2d0, receiver=0x19d3630, e=0x7fff53a04320) at kernel/qapplication.cpp:4458
#20 0x00007f532e962cbb in QApplication::notify (this=<optimized out>, receiver=0x19d3630, e=0x7fff53a04320) at kernel/qapplication.cpp:4047
#21 0x00007f533025c466 in KApplication::notify (this=0x7fff53a04f90, receiver=0x19d3630, event=0x7fff53a04320) at ../../kdeui/kernel/kapplication.cpp:311
#22 0x00007f532f826afc in QCoreApplication::notifyInternal (this=0x7fff53a04f90, receiver=0x19d3630, event=0x7fff53a04320) at kernel/qcoreapplication.cpp:787
#23 0x00007f532e95e442 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#24 QApplicationPrivate::sendMouseEvent (receiver=0x19d3630, event=0x7fff53a04320, alienWidget=0x0, nativeWidget=0x19d3630, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#25 0x00007f532e9dd9d5 in QETWidget::translateMouseEvent (this=0x19d3630, event=<optimized out>) at kernel/qapplication_x11.cpp:4571
#26 0x00007f532e9dc94e in QApplication::x11ProcessEvent (this=0x7fff53a04f90, event=0x7fff53a04b40) at kernel/qapplication_x11.cpp:3693
#27 0x00007f532ea054a2 in x11EventSourceDispatch (s=0x1835bc0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0x00007f5329205a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f5329206258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f5329206429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f532f851ed6 in QEventDispatcherGlib::processEvents (this=0x17f4f40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#32 0x00007f532ea0510e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f532f825cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007f532f825ef7 in QEventLoop::exec (this=0x7fff53a04f10, flags=...) at kernel/qeventloop.cpp:201
#35 0x00007f532f82a789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#36 0x00000000004140ef in main (argc=3, argv=0x7fff53a05e18) at ../../../kopete/kopete/main.cpp:105

Possible duplicates by query: bug 208069, bug 204243.

Reported using DrKonqi
Comment 1 Pali Rohár 2013-10-26 12:29:22 UTC
Git commit ea10eb75937aba921a46f19cf8d9d8e42e092902 by Pali Rohár.
Committed on 26/10/2013 at 12:16.
Pushed by pali into branch 'master'.

Fix dereferencing NULL pointer, d->identity can be NULL
FIXED-IN: 4.12

M  +4    -1    kopete/identity/identitystatuswidget.cpp

http://commits.kde.org/kopete/ea10eb75937aba921a46f19cf8d9d8e42e092902