Fix dereferencing NULL pointer, d->identity can be NULL

BUG: 297507
FIXED-IN: 4.12